syntax = "proto3";
package qa.loadtesting.alilo.backend.v1;

option go_package = "github.com/aliexpressru/alilo-backend/pkg/pb/qa/loadtesting/alilo/backend/v1";


import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "qa/loadtesting/alilo/backend/v1/models.proto";


message GetAllScriptsRequest {
  int32 scenario_id = 1;
}

message GetAllScriptsResponse {
  bool status = 1;
  repeated .qa.loadtesting.alilo.backend.v1.Script scripts = 2;
  repeated .qa.loadtesting.alilo.backend.v1.SimpleScript simple_scripts = 4;
  string message = 3;
}

message CreateScriptRequest {
  .qa.loadtesting.alilo.backend.v1.Script script = 1;
}

message CreateScriptResponse {
  bool status = 1;
  int32 script_id = 2;
  string message = 3;
}

message GetScriptRequest {
  int32 script_id = 2;
}

message GetScriptResponse {
  bool status = 1;
  .qa.loadtesting.alilo.backend.v1.Script script = 2;
  string message = 3;
}

message UpdateScriptRequest {
  .qa.loadtesting.alilo.backend.v1.Script script = 2;
}

message UpdateScriptResponse {
  bool status = 1;
  string message = 2;
}

message DeleteScriptRequest {
  int32 script_id = 1;
}

message DeleteScriptResponse {
  bool status = 1;
  string message = 2;
}

message MoveScriptRequest {
  int32 script_id = 1;
  int32 project_id = 2;
  optional int32 scenario_id = 3;
}

message MoveScriptResponse {
  bool status = 1;
  string message = 2;
}

message CopyScriptRequest {
  int32 source_script_id = 1;
  int32 target_scenario_id = 2;
}

message CopyScriptResponse {
  bool status = 1;
  string message = 2;
}


message GetSimpleScriptRequest {
  int32 simple_script_id = 2;
}

message GetSimpleScriptResponse {
  bool status = 1;
  string message = 2;
  .qa.loadtesting.alilo.backend.v1.SimpleScript simple_script = 3;
}

message CreateSimpleScriptRequest {
  .qa.loadtesting.alilo.backend.v1.SimpleScript simple_script = 1;
}

message CreateSimpleScriptResponse {
  bool status = 1;
  int32 simple_script_id = 2;
  string message = 3;
}

message UpdateSimpleScriptRequest {
  .qa.loadtesting.alilo.backend.v1.SimpleScript simple_script = 1;
}

message UpdateSimpleScriptResponse {
  bool status = 1;
  string message = 2;
}

message DeleteSimpleScriptRequest {
  int32 simple_script_id = 1;
}

message DeleteSimpleScriptResponse {
  bool status = 1;
  string message = 2;
}

message MoveSimpleScriptRequest {
  int32 simple_script_id = 1;
  int32 target_scenario_id = 3;
}

message MoveSimpleScriptResponse {
  bool status = 1;
  string message = 2;
}

message CopySimpleScriptRequest {
  int32 source_simple_script_id = 1;
  int32 target_scenario_id = 2;
}

message CopySimpleScriptResponse {
  bool status = 1;
  int32 simple_script_id = 2;
  string message = 3;
}



message LinkConverterRequest {
  string script_url = 1;
}

message LinkConverterResponse {
//  bool status = 1;
  LinkStatus status = 2;
  string message = 3;
  string valid_url = 4;
}

enum LinkStatus {
    LINK_STATUS_UNSPECIFIED = 0;
    LINK_STATUS_EMPTY = 1;
    LINK_STATUS_INVALID = 2;
    LINK_STATUS_VALID = 3;
    LINK_STATUS_FIXED = 4;
//    LINK_STATUS_
}
